# splineax

./: LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: index.md
docs/api/: operators.md  solvers.md
docs/guide/: advanced.md  basic.md  operators.md  solvers.md
src/splineax/: __init__.py
src/splineax/operators/: __init__.py  _bcoo.py  _bcsr.py  _jacobian.py  _operations.py  _sparse.py
src/splineax/solvers/: __init__.py  _auto.py  _handle.py  _klu.py  _pardiso.py  _sparse.py  _spsolve.py
tests/: conftest.py
tests/integration/: test_docs.py
tests/unit/operators/: test_jacobian.py  test_operators.py
tests/unit/solvers/: conftest.py  test_auto.py  test_factorization.py  test_handle.py  test_klu.py  test_pardiso.py  test_solvers.py  test_spsolve.py
