[project]
name = "splineax"
version = "0.1.1"
description = "Sparse linear operators and solvers for Lineax"
readme = "README.md"
authors = [{ name = "Nardi Lam", email = "mail@nardilam.nl" }]
requires-python = ">=3.11"
dependencies = [
    "lineax>=0.1.1",
    "jax>=0.4",
    "equinox>=0.11",
    "jaxtyping>=0.2",
    # klujax is pinned to custom fork wheels (with fixes not yet upstream).
    # Note: this makes splineax unpublishable to PyPI, which rejects packages
    # with direct-URL dependencies.
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp311-cp311-macosx_11_0_arm64.whl ; python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp311-cp311-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'aarch64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp311-cp311-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp311-cp311-win_amd64.whl ; python_version == '3.11' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp311-cp311-win_arm64.whl ; python_version == '3.11' and sys_platform == 'win32' and platform_machine == 'ARM64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp312-cp312-macosx_11_0_arm64.whl ; python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp312-cp312-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'aarch64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp312-cp312-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp312-cp312-win_amd64.whl ; python_version == '3.12' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp312-cp312-win_arm64.whl ; python_version == '3.12' and sys_platform == 'win32' and platform_machine == 'ARM64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp313-cp313-macosx_11_0_arm64.whl ; python_version == '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp313-cp313-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; python_version == '3.13' and sys_platform == 'linux' and platform_machine == 'aarch64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp313-cp313-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.13' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp313-cp313-win_amd64.whl ; python_version == '3.13' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp313-cp313-win_arm64.whl ; python_version == '3.13' and sys_platform == 'win32' and platform_machine == 'ARM64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp314-cp314-macosx_11_0_arm64.whl ; python_version == '3.14' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp314-cp314-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; python_version == '3.14' and sys_platform == 'linux' and platform_machine == 'aarch64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp314-cp314-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; python_version == '3.14' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp314-cp314-win_amd64.whl ; python_version == '3.14' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "klujax @ https://github.com/nardi/klujax/releases/download/dispatch-split_solve_fixes-d715101/klujax-0.5.0+gha8.d715101-cp314-cp314-win_arm64.whl ; python_version == '3.14' and sys_platform == 'win32' and platform_machine == 'ARM64'",
    "asdex @ git+https://github.com/nardi/asdex@pytree_coloring",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.27",
    "pytest>=9.1.0",
    "pytest-markdown-docs>=0.9.2",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
# Execute the code examples in the markdown docs (and README) as tests via
# pytest-markdown-docs. The superfences syntax lets dependent code blocks share state
# with a `{.python continuation}` fence, which also renders under Material for MkDocs.
addopts = "--markdown-docs --markdown-docs-syntax superfences"
testpaths = ["tests", "docs", "README.md"]

[tool.ruff.lint]
ignore = ["F722"]
select = ["E4", "E7", "E9", "F", "I"]
