[project]
name = "splineax"
version = "0.2.0"
description = "Sparse linear operators and solvers for Lineax"
readme = "README.md"
authors = [{ name = "Nardi Lam", email = "mail@nardilam.nl" }]
requires-python = ">=3.11"
dependencies = [
    "lineax>=0.1.1",
    "jax>=0.4",
    "equinox>=0.11",
    "jaxtyping>=0.2",
    "splineax-klujax>=0.5.0.post1",
    "asdex>=0.5.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.27",
    "pytest>=9.1.0",
    "pytest-markdown-docs>=0.9.2",
    "ruff>=0.15.17",
    "ty>=0.0.59",
]

[tool.pytest.ini_options]
# Execute the code examples in the markdown docs (and README) as tests via
# pytest-markdown-docs. The superfences syntax lets dependent code blocks share state
# with a `{.python continuation}` fence, which also renders under Material for MkDocs.
addopts = "--markdown-docs --markdown-docs-syntax superfences"
testpaths = ["tests", "docs", "README.md"]

[tool.ruff.lint]
ignore = ["F722"]
select = ["E4", "E7", "E9", "F", "I"]
